--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,27 +2,25 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    android:id="@+id/nav_graph_main"
+    app:startDestination="@id/messagesFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="szathmary.peter.mychat.ui.login.FirstFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
-
+        android:id="@+id/messagesFragment"
+        android:name="szathmary.peter.mychat.main.activity.MessagesFragment"
+        android:label="fragment_messages"
+        tools:layout="@layout/fragment_messages" >
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/action_messagesFragment_to_userFragment"
+            app:destination="@id/userFragment" />
     </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
-        android:name="szathmary.peter.mychat.ui.login.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
-
+        android:id="@+id/userFragment"
+        android:name="szathmary.peter.mychat.main.activity.UserFragment"
+        android:label="fragment_user"
+        tools:layout="@layout/fragment_user" >
         <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
+            android:id="@+id/action_userFragment_to_messagesFragment"
+            app:destination="@id/messagesFragment" />
     </fragment>
 </navigation>
