--- a/app/src/main/res/layout/item_list_message.xml
+++ b/app/src/main/res/layout/item_list_message.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="?android:attr/listPreferredItemHeightLarge">
@@ -15,7 +16,8 @@
         android:gravity="center|end"
         android:padding="16dp"
         android:text="@string/user"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        tools:ignore="RtlSymmetry" />
 
     <TextView
         android:id="@+id/message_text"
