--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -9,6 +9,7 @@
     <TextView
         android:id="@+id/error_warning_message_login"
         android:layout_width="wrap_content"
+        android:paddingEnd="10dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="@+id/passwordTextEditLogin"
         app:layout_constraintTop_toBottomOf="@+id/passwordTextEditLogin" />
