--- a/app/src/main/res/layout-land/fragment_messages.xml
+++ b/app/src/main/res/layout-land/fragment_messages.xml
@@ -9,15 +9,13 @@
 
     <EditText
         android:id="@+id/message_input"
-        android:layout_width="338dp"
+        android:layout_width="0dp"
         android:layout_height="50dp"
         android:ems="10"
         android:gravity="start|top"
-        android:hint="@string/message_input"
-        android:importantForAutofill="no"
         android:inputType="textMultiLine"
-        android:textColorHint="#757575"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/send_button"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -35,11 +33,8 @@
         android:id="@+id/send_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/send_message_button"
         android:src="@android:drawable/ic_menu_send"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/message_input"
-        tools:ignore="RedundantDescriptionCheck" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
