--- a/app/src/main/res/layout-land/fragment_messages.xml
+++ b/app/src/main/res/layout-land/fragment_messages.xml
@@ -31,7 +31,7 @@
 
     <ImageButton
         android:id="@+id/send_button"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:src="@android:drawable/ic_menu_send"
         app:layout_constraintBottom_toBottomOf="parent"
