--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -9,7 +9,7 @@
 
     <EditText
         android:id="@+id/message_input"
-        android:layout_width="338dp"
+        android:layout_width="0dp"
         android:layout_height="50dp"
         android:ems="10"
         android:gravity="start|top"
@@ -18,6 +18,7 @@
         android:inputType="textMultiLine"
         android:textColorHint="#757575"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/send_button"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -33,13 +34,12 @@
 
     <ImageButton
         android:id="@+id/send_button"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:contentDescription="@string/send_message_button"
         android:src="@android:drawable/ic_menu_send"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/message_input"
         tools:ignore="RedundantDescriptionCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
