--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -23,7 +23,7 @@
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/welcome_register" />
 
     <EditText
         android:id="@+id/email"
@@ -94,7 +94,7 @@
         app:srcCompat="@android:drawable/ic_delete" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/welcome_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
