--- a/app/src/main/res/layout-land/activity_reset_password.xml
+++ b/app/src/main/res/layout-land/activity_reset_password.xml
@@ -41,14 +41,14 @@
         android:id="@+id/password_password_reset"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="32dp"
         android:hint="@string/new_password"
         android:inputType="textPassword"
         android:minHeight="48dp"
-        android:autofillHints="false"
         android:selectAllOnFocus="true"
-        android:textColorHint="#757575"
         app:layout_constraintEnd_toEndOf="parent"
+        android:autofillHints="false"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -59,12 +59,11 @@
         android:layout_marginTop="8dp"
         android:hint="@string/repeat_password"
         android:imeActionLabel="@string/action_sign_in_short"
-        android:autofillHints="false"
         android:imeOptions="actionDone"
+        android:autofillHints="false"
         android:inputType="textPassword"
         android:minHeight="48dp"
         android:selectAllOnFocus="true"
-        android:textColorHint="#757575"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password_password_reset" />
